--- a/package.json
+++ b/package.json
@@ -1,9 +1,25 @@
 {
   "name": "ep_oae",
+  "description": "Open Academic Environment (OAE) Etherpad Plugin",
   "version": "0.0.1",
-  "description": "An etherpad plugin that allows the OAE system to authenticate OAE users.",
-  "author": "Sakai OAE Team",
-  "contributors": [],
+  "homepage": "http://www.oaeproject.org",
+  "author": {
+    "name": "The Apereo Foundation",
+    "email": "oae-dev@collab.sakaiproject.org"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/oaeproject/ep_oae.git"
+  },
+  "bugs": {
+    "url": "https://github.com/oaeproject/ep_oae/issues"
+  },
+  "licenses": [
+    {
+      "type": "ECLv2",
+      "url": "http://opensource.org/licenses/ecl2.php"
+    }
+  ],
   "dependencies": {},
   "engines": {
     "node": ">= 0.8.0"
