--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
       "url": "http://opensource.org/licenses/ecl2.php"
     }
   ],
-  "dependencies": {},
+  "dependencies": {
+    "amqp": "0.2.0"
+  },
   "engines": {
     "node": ">= 0.8.0"
   }
