remove config.json and pass key through argv

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "crowdin": "latest",
     "mv": "latest",
+    "optimist": "latest",
     "temp": "latest",
     "underscore": "latest"
   },
